fxGrid and Reactive Form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,5 +4,10 @@
   },
   "language": {
     "title": "Language"
+  },
+  "appointment": {
+    "form": {
+      "title": "Creat Appointment"
+    }
   }
 }
