--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -2,6 +2,9 @@
   "app" : {
     "title": "Apspediatric PT"
   },
+  "app_title": {
+    "new": "Novo"
+  },
   "language": {
     "title": "Idioma"
   }
