group resolver / fix routes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,6 +31,9 @@
     "form": {
       "title": "Creat Group",
       "group": "Group Title"
+    },
+    "list": {
+      "title": "Groups"
     }
   },
   "commom": {
