--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,8 @@
   "auth": {
     "login": "Login",
     "successful": "Login with successful",
-    "warning": "Wrong Email or password"
+    "warning": "Wrong Email or password",
+    "wait": "Wait..."
   },
   "table": {
     "actions": "Actions",
