manager questions by group Id

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,6 +37,8 @@
   "question": {
     "title": "Question",
     "form": {
+      "new": "New Question",
+      "edito": "Edit Question",
       "questions": "Questions"
     }
   },
