--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,9 @@
   "language": {
     "title": "Language"
   },
+  "appointment": {
+    "title": "Appointments"
+  },
   "question": {
     "title": "Question",
     "form": {
