--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,7 +24,9 @@
     "sure": "Form data has been modified. Are you sure ?",
     "validation": {
       "required": "Field is required",
-      "email": "Wrong email format"
+      "email": "Wrong email format",
+      "max_length": "Max {{ maxLength }} characters",
+      "mat_datepicker_parse": "Invalid date format"
     },
     "updated": "Register updated",
     "removed": "Register removed"
@@ -74,7 +76,7 @@
       "title": "Identification",
       "name": "Responsible Name",
       "child_name": "Child Name",
-      "child_age": "Child Age",
+      "child_age": "Date of birth",
       "parental_degree": "Parental Degree"
     },
     "patients": {
