form identification and form array patients

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,7 +93,8 @@
     "next": "Next",
     "back": "Back",
     "date": "Date",
-    "done": "Done"
+    "done": "Done",
+    "add_new": "Add New"
   },
   "messages": {
     "SUCCESS": "Success ",
