saving responsible, patients and contacts

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,7 +83,14 @@
       "title": "Patients"
     },
     "contacts": {
-      "title": "Contacts"
+      "title": "Contacts",
+      "contact_type": "Contact Type",
+      "contact": "Contact",
+      "contacts": {
+        "t": "Telephone",
+        "e": "E-mail",
+        "w": "Web"
+      }
     }
   },
   "commom": {
