--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,7 +40,14 @@
     "title": "Language"
   },
   "appointment": {
-    "title": "Appointments"
+    "title": "Appointments",
+    "list": {
+      "title": "Query Appointments"
+    },
+    "form": {
+      "new": "New Appointment",
+      "detail": "Appointment Detail"
+    }
   },
   "question": {
     "title": "Question",
