more things in appointment page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,7 +46,8 @@
     },
     "form": {
       "new": "New Appointment",
-      "detail": "Appointment Detail"
+      "detail": "Appointment Detail",
+      "description": "Appointment Description"
     }
   },
   "question": {
