--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,7 +47,8 @@
     "form": {
       "new": "New Appointment",
       "detail": "Appointment Detail",
-      "description": "Appointment Description"
+      "description": "Appointment Description",
+      "evaluation": "Description"
     }
   },
   "question": {
