--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -105,7 +105,8 @@
       "edit": "Edit Question",
       "questions": "Questions",
       "question": "Question",
-      "option": "Option"
+      "option": "Option",
+      "order": "Order"
     }
   },
   "group": {
